--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,16 +1,42 @@
 html,
 body {
+  font-family: 'Times New Roman', Monospace;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  --dot-bg: #580c37;
+  --dot-color: rgb(0, 0, 0);
+  --dot-size: 2px;
+  --dot-space: 20px;
+  background:
+    linear-gradient(90deg, var(--dot-bg) calc(var(--dot-space) - var(--dot-size)), transparent 1%) center / var(--dot-space) var(--dot-space),
+    linear-gradient(var(--dot-bg) calc(var(--dot-space) - var(--dot-size)), transparent 1%) center / var(--dot-space) var(--dot-space),
+    var(--dot-color);
 }
 
 a {
   color: inherit;
   text-decoration: none;
+  /*center it*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
 }
 
 * {
   box-sizing: border-box;
+}
+
+h1 {
+  font-size: 4rem;
+
+  margin: 0;
+  padding: 0;
+  font-weight: bolder;
+  text-align: center;
+}
+p {
+  font-size: 1.5rem;
+  margin: 0;
+  padding: 0;
 }
