--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -85,10 +85,6 @@
   padding: 1rem;
 }
 
-.cards :nth-child(4) {
-  grid-column: 2;
-}
-
 
 .card {
   display: flex;
@@ -110,6 +106,8 @@
   padding: 0;
   font-weight: bolder;
   text-align: left;
+  display: flex;
+  align-items: center;
 }
 
 .card p{
@@ -157,9 +155,17 @@
 
 .socials {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 5rem;
   justify-content: center;
+}
+
+.team__cards {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+  width: 100%;
+  padding: 1rem;
 }
 
 
@@ -172,6 +178,9 @@
   }
 
   .cards {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .team__cards {
     grid-template-columns: repeat(1, 1fr);
   }
 
