--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -162,7 +162,7 @@
 
 .team__cards {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
   width: 100%;
   padding: 1rem;
@@ -179,14 +179,12 @@
 
   .cards {
     grid-template-columns: repeat(1, 1fr);
+    
   }
   .team__cards {
     grid-template-columns: repeat(1, 1fr);
   }
 
-  .cards :nth-child(4) {
-    grid-column: 1;
-  }
 
   .section_title {
     font-size: 3rem;
@@ -194,6 +192,11 @@
 
   .card {
     max-width: 90vw;
+    /* center everythign */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
   .card h1{
