--- a/src/styles/Tags.module.css
+++ b/src/styles/Tags.module.css
@@ -157,3 +157,8 @@
     background-color: #00b4ab;
     color: #fff;
 }
+
+.sbox {
+    background-color: #3273eb; /* S&Box color */
+    color: #fff;
+}
